// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package GreeterPackage;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloMessage) returns (HelloResponse) {}
  rpc SayGoodbye (GoodbyeMessage) returns (GoodbyeResponse) {}
}

// The request message containing the user's name.
message HelloMessage {
  string message = 1;
}
// The response message containing the greetings
message HelloResponse {
  string message = 1;
}

// The request message containing the user's name.
message GoodbyeMessage {
  string message = 1;
}
// The request message containing the user's name.
message GoodbyeResponse {
  string message = 1;
}


//message Song {
//  int32 id = 1;
//  string title = 2;
//  string artist = 3;
//}
//
//message Comment {
//  int32 song_id = 1;
//  string username = 2;
//  string body = 3;
//}
//
//service Songs {
//  rpc GetSong(google.protobuf.Empty) returns (Song) {};
//  rpc AddSongs(stream Song) returns (google.protobuf.Empty) {};
//  rpc GetChat(Song) returns (stream Comment) {};
//  rpc LiveChat(stream Comment) returns (stream Comment) {};
//}
